--- a/_source/LigaCancer/Views/Home/Index.cshtml
+++ b/_source/LigaCancer/Views/Home/Index.cshtml
@@ -166,7 +166,7 @@
 
 
 @section scripts {
-    <script src="~/js/chart.min.js"></script>
-    <script src="~/js/custom-tooltips.min.js"></script>
-    <script src="~/js/main.js"></script>
+    <script src="~/lib/chart-js/Chart.min.js"></script>
+    <script src="~/lib/core-ui/custom-tooltips.min.js"></script>
+    <script src="~/lib/core-ui/main.js"></script>
 }
