--- a/_source/LigaCancer/Views/Shared/_Layout.cshtml
+++ b/_source/LigaCancer/Views/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <link href="~/css/fonts/fontawesome.min.css" rel="stylesheet" />
+    <link href="~/lib/fontawesome/web-fonts-with-css/css/fontawesome-all.min.css" rel="stylesheet" />
     <link href="~/css/style.css" rel="stylesheet" />
     @RenderSection("Styles", required: false)
 </head>
@@ -110,7 +110,7 @@
     </footer>
 
     <script src="~/lib/jquery/jquery.min.js"></script>
-    <script src="~/js/coreui.min.js"></script>
+    <script src="~/lib/core-ui/coreui.min.js"></script>
     <script src="~/lib/bootstrap/js/bootstrap.min.js"></script>
     @RenderSection("Scripts", required: false)
 </body>
