--- a/_source/LigaCancer/Views/Doctor/Index.cshtml
+++ b/_source/LigaCancer/Views/Doctor/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<LigaCancer.Data.Models.Patient.Doctor>
+﻿@model PaginatedList<LigaCancer.Data.Models.Patient.Doctor>
 @using LigaCancer.Code
 @{
     ViewData["Title"] = "Médicos";
@@ -6,6 +6,14 @@
 }
 
 <main class="main">
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item">
+            <a href="/">Home</a>
+        </li>
+        <li class="breadcrumb-item">
+            Médicos
+        </li>
+    </ol>
     <div class="container-fluid">
         <div id="ui-view" style="opacity: 1;">
             <div class="animated fadeIn">
@@ -59,10 +67,10 @@
                                     <thead>
                                         <tr>
                                             <th>
-                                                @Html.DisplayNameFor(model => model.Name)
+                                                @Html.DisplayNameFor(model => model.FirstOrDefault().Name)
                                             </th>
                                             <th>
-                                                @Html.DisplayNameFor(model => model.CRM)
+                                                @Html.DisplayNameFor(model => model.FirstOrDefault().CRM)
                                             </th>
                                             <th>
                                                 Ações
@@ -83,10 +91,10 @@
                                                     <a asp-action="DetailsDoctor" asp-route-id="@item.DoctorId" class="btn btn-primary">
                                                         <i class="glyphicon glyphicon-pencil"></i> Mostrar
                                                     </a>
-                                                    <a asp-action="EditDoctor" asp-route-id="@item.DoctorId" data-toggle="modal" data-target="#modal-action-doctor"  class="btn btn-info">
+                                                    <a asp-action="EditDoctor" asp-route-id="@item.DoctorId" data-toggle="modal" data-target="#modal-action-doctor" class="btn btn-info">
                                                         <i class="glyphicon glyphicon-pencil"></i> Editar
                                                     </a>
-                                                    <a asp-action="DeleteDoctor" asp-route-id="@item.DoctorId" data-toggle="modal" data-target="#modal-action-doctor"  class="btn btn-danger">
+                                                    <a asp-action="DeleteDoctor" asp-route-id="@item.DoctorId" data-toggle="modal" data-target="#modal-action-doctor" class="btn btn-danger">
                                                         <i class="glyphicon glyphicon-trash"></i> Deletar
                                                     </a>
                                                 </td>
@@ -95,6 +103,63 @@
                                     </tbody>
                                 </table>
 
+                                @{
+                                    var prevDisabled = !Model.HasPreviousPage ? "disabled" : "";
+                                    var nextDisabled = !Model.HasNextPage ? "disabled" : "";
+                                    var lastDisabled = Model.PageIndex == Model.TotalPages ? "disabled" : "";
+                                    var firstDisabled = !(Model.PageIndex > 1) ? "disabled" : "";
+                                }
+
+                                <nav aria-label="Page navigation example">
+                                    <ul class="pagination justify-content-center">
+                                        <li class="page-item @firstDisabled">
+                                            <a class="page-link" asp-action="Index" asp-route-page="1">Início</a>
+                                        </li>
+                                        <li class="page-item @prevDisabled">
+                                            <a class="page-link" asp-action="Index" asp-route-page="@(Model.PageIndex - 1)">
+                                                Anterior
+                                            </a>
+                                        </li>
+                                        @if (Model.HasPreviousPage)
+                                        {
+                                            @if (Model.PageIndex > 2)
+                                            {
+                                                <li class="page-item">
+                                                    <a class="page-link" asp-action="Index" asp-route-page="@(Model.PageIndex - 2)">@(Model.PageIndex - 2)</a>
+                                                </li>
+                                            }
+                                            <li class="page-item">
+                                                <a class="page-link" asp-action="Index" asp-route-page="@(Model.PageIndex - 1)">@(Model.PageIndex - 1)</a>
+                                            </li>
+                                        }
+                                        <li class="page-item active">
+                                            <a class="page-link" asp-action="Index" asp-route-page="@Model.PageIndex">@Model.PageIndex</a>
+                                        </li>
+                                        @if (Model.HasNextPage)
+                                        {
+                                            <li class="page-item">
+                                                <a class="page-link" asp-action="Index" asp-route-page="@(Model.PageIndex + 1)">@(Model.PageIndex + 1)</a>
+                                            </li>
+                                            @if (Model.PageIndex + 1 < Model.TotalPages)
+                                            {
+                                                <li class="page-item">
+                                                    <a class="page-link" asp-action="Index" asp-route-page="@(Model.PageIndex + 2)">@(Model.PageIndex + 2)</a>
+                                                </li>
+                                            }
+                                        }
+
+                                        <li class="page-item @nextDisabled">
+                                            <a class="page-link" asp-action="Index" asp-route-page="@(Model.PageIndex + 1)">
+                                                Próximo
+                                            </a>
+                                        </li>
+                                        <li class="page-item @lastDisabled">
+                                            <a class="page-link" asp-action="Index" asp-route-page="@Model.TotalPages">
+                                                Última
+                                            </a>
+                                        </li>
+                                    </ul>
+                                </nav>
                             </div>
                         </div>
                     </div>
