--- a/_source/LigaCancer/Views/Shared/_Layout.cshtml
+++ b/_source/LigaCancer/Views/Shared/_Layout.cshtml
@@ -104,8 +104,8 @@
     </div>
     <footer class="app-footer">
         <div class="ml-auto">
-            <span>Powered by</span>
-            <a href="https://github.com/felipepergher" target="_blank">Felipe</a>
+            <span>Desenvolvido por</span>
+            <a href="https://github.com/felipepergher" target="_blank">Felipe Pergher</a>
         </div>
     </footer>
 
