--- a/_source/LigaCancer/Views/Shared/_Pagination.cshtml
+++ b/_source/LigaCancer/Views/Shared/_Pagination.cshtml
@@ -7,53 +7,69 @@
     var firstDisabled = !(Model.PageIndex > 1) ? "disabled" : "";
 }
 
-<nav aria-label="Page navigation example">
-    <ul class="pagination justify-content-center">
-        <li class="page-item @firstDisabled">
-            <a class="page-link" asp-action="Index" asp-route-page="1">Início</a>
-        </li>
-        <li class="page-item @prevDisabled">
-            <a class="page-link" asp-action="Index" asp-route-page="@(Model.PageIndex - 1)">
-                Anterior
-            </a>
-        </li>
-        @if (Model.HasPreviousPage)
+<div class="row">
+    <div class="col-sm-12 col-md-5">
+        @if (Model.InitValue == Model.EndValue)
         {
-            @if (Model.PageIndex > 2)
-            {
-                <li class="page-item">
-                    <a class="page-link" asp-action="Index" asp-route-page="@(Model.PageIndex - 2)">@(Model.PageIndex - 2)</a>
-                </li>
-            }
-            <li class="page-item">
-                <a class="page-link" asp-action="Index" asp-route-page="@(Model.PageIndex - 1)">@(Model.PageIndex - 1)</a>
-            </li>
+            <div>Mostrando elemento @Model.InitValue de um total de @Model.CountTotal registros</div>
         }
-        <li class="page-item active">
-            <a class="page-link" asp-action="Index" asp-route-page="@Model.PageIndex">@Model.PageIndex</a>
-        </li>
-        @if (Model.HasNextPage)
+        else
         {
-            <li class="page-item">
-                <a class="page-link" asp-action="Index" asp-route-page="@(Model.PageIndex + 1)">@(Model.PageIndex + 1)</a>
-            </li>
-            @if (Model.PageIndex + 1 < Model.TotalPages)
-            {
-                <li class="page-item">
-                    <a class="page-link" asp-action="Index" asp-route-page="@(Model.PageIndex + 2)">@(Model.PageIndex + 2)</a>
-                </li>
-            }
+            <div>Mostrando @Model.InitValue à @Model.EndValue de um total de @Model.CountTotal registros</div>
         }
+    </div>
 
-        <li class="page-item @nextDisabled">
-            <a class="page-link" asp-action="Index" asp-route-page="@(Model.PageIndex + 1)">
-                Próximo
-            </a>
-        </li>
-        <li class="page-item @lastDisabled">
-            <a class="page-link" asp-action="Index" asp-route-page="@Model.TotalPages">
-                Última
-            </a>
-        </li>
-    </ul>
-</nav>
+
+    <div class="col-sm-12 col-md-7">
+        <nav aria-label="Page navigation example">
+            <ul class="pagination justify-content-end">
+                <li class="page-item @firstDisabled">
+                    <a class="page-link" asp-action="Index" asp-route-page="1">Início</a>
+                </li>
+                <li class="page-item @prevDisabled">
+                    <a class="page-link" asp-action="Index" asp-route-page="@(Model.PageIndex - 1)">
+                        Anterior
+                    </a>
+                </li>
+                @if (Model.HasPreviousPage)
+                {
+                    @if (Model.PageIndex > 2)
+                    {
+                        <li class="page-item">
+                            <a class="page-link" asp-action="Index" asp-route-page="@(Model.PageIndex - 2)">@(Model.PageIndex - 2)</a>
+                        </li>
+                    }
+                    <li class="page-item">
+                        <a class="page-link" asp-action="Index" asp-route-page="@(Model.PageIndex - 1)">@(Model.PageIndex - 1)</a>
+                    </li>
+                }
+                <li class="page-item active">
+                    <a class="page-link" asp-action="Index" asp-route-page="@Model.PageIndex">@Model.PageIndex</a>
+                </li>
+                @if (Model.HasNextPage)
+                {
+                    <li class="page-item">
+                        <a class="page-link" asp-action="Index" asp-route-page="@(Model.PageIndex + 1)">@(Model.PageIndex + 1)</a>
+                    </li>
+                    @if (Model.PageIndex + 1 < Model.TotalPages)
+                    {
+                        <li class="page-item">
+                            <a class="page-link" asp-action="Index" asp-route-page="@(Model.PageIndex + 2)">@(Model.PageIndex + 2)</a>
+                        </li>
+                    }
+                }
+
+                <li class="page-item @nextDisabled">
+                    <a class="page-link" asp-action="Index" asp-route-page="@(Model.PageIndex + 1)">
+                        Próximo
+                    </a>
+                </li>
+                <li class="page-item @lastDisabled">
+                    <a class="page-link" asp-action="Index" asp-route-page="@Model.TotalPages">
+                        Última
+                    </a>
+                </li>
+            </ul>
+        </nav>
+    </div>
+</div>
