--- a/_source/LigaCancer/Views/Shared/_Pagination.cshtml
+++ b/_source/LigaCancer/Views/Shared/_Pagination.cshtml
@@ -24,48 +24,60 @@
         <nav aria-label="Page navigation example">
             <ul class="pagination justify-content-end">
                 <li class="page-item @firstDisabled">
-                    <a class="page-link" asp-action="Index" asp-route-page="1">Início</a>
+                    <a class="page-link" asp-action="Index" asp-route-page="1" asp-route-currentFilter="@ViewData["CurrentFilter"]" asp-route-sortOrder="@ViewData["CurrentSort"]">Início</a>
                 </li>
+
                 <li class="page-item @prevDisabled">
-                    <a class="page-link" asp-action="Index" asp-route-page="@(Model.PageIndex - 1)">
+                    <a class="page-link" asp-action="Index" asp-route-page="@(Model.PageIndex - 1)" asp-route-currentFilter="@ViewData["CurrentFilter"]" asp-route-sortOrder="@ViewData["CurrentSort"]">
                         Anterior
                     </a>
                 </li>
+
                 @if (Model.HasPreviousPage)
                 {
                     @if (Model.PageIndex > 2)
                     {
                         <li class="page-item">
-                            <a class="page-link" asp-action="Index" asp-route-page="@(Model.PageIndex - 2)">@(Model.PageIndex - 2)</a>
+                            <a class="page-link" asp-action="Index" asp-route-page="@(Model.PageIndex - 2)" asp-route-currentFilter="@ViewData["CurrentFilter"]" asp-route-sortOrder="@ViewData["CurrentSort"]">@(Model.PageIndex - 2)</a>
                         </li>
                     }
                     <li class="page-item">
-                        <a class="page-link" asp-action="Index" asp-route-page="@(Model.PageIndex - 1)">@(Model.PageIndex - 1)</a>
+                        <a class="page-link" asp-action="Index" asp-route-page="@(Model.PageIndex - 1)" asp-route-currentFilter="@ViewData["CurrentFilter"]" asp-route-sortOrder="@ViewData["CurrentSort"]">
+                            @(Model.PageIndex - 1)
+                        </a>
                     </li>
                 }
+
                 <li class="page-item active">
-                    <a class="page-link" asp-action="Index" asp-route-page="@Model.PageIndex">@Model.PageIndex</a>
+                    <a class="page-link" asp-action="Index" asp-route-page="@Model.PageIndex" asp-route-currentFilter="@ViewData["CurrentFilter"]" asp-route-sortOrder="@ViewData["CurrentSort"]">
+                        @Model.PageIndex
+                    </a>
                 </li>
+
                 @if (Model.HasNextPage)
                 {
                     <li class="page-item">
-                        <a class="page-link" asp-action="Index" asp-route-page="@(Model.PageIndex + 1)">@(Model.PageIndex + 1)</a>
+                        <a class="page-link" asp-action="Index" asp-route-page="@(Model.PageIndex + 1)" asp-route-currentFilter="@ViewData["CurrentFilter"]" asp-route-sortOrder="@ViewData["CurrentSort"]">
+                            @(Model.PageIndex + 1)
+                        </a>
                     </li>
                     @if (Model.PageIndex + 1 < Model.TotalPages)
                     {
                         <li class="page-item">
-                            <a class="page-link" asp-action="Index" asp-route-page="@(Model.PageIndex + 2)">@(Model.PageIndex + 2)</a>
+                            <a class="page-link" asp-action="Index" asp-route-page="@(Model.PageIndex + 2)" asp-route-currentFilter="@ViewData["CurrentFilter"]" asp-route-sortOrder="@ViewData["CurrentSort"]">
+                                @(Model.PageIndex + 2)
+                            </a>
                         </li>
                     }
                 }
 
                 <li class="page-item @nextDisabled">
-                    <a class="page-link" asp-action="Index" asp-route-page="@(Model.PageIndex + 1)">
+                    <a class="page-link" asp-action="Index" asp-route-page="@(Model.PageIndex + 1)" asp-route-currentFilter="@ViewData["CurrentFilter"]" asp-route-sortOrder="@ViewData["CurrentSort"]">
                         Próximo
                     </a>
                 </li>
                 <li class="page-item @lastDisabled">
-                    <a class="page-link" asp-action="Index" asp-route-page="@Model.TotalPages">
+                    <a class="page-link" asp-action="Index" asp-route-page="@Model.TotalPages" asp-route-currentFilter="@ViewData["CurrentFilter"]" asp-route-sortOrder="@ViewData["CurrentSort"]">
                         Última
                     </a>
                 </li>
