Identing and renaming data

--- a/_source/LigaCancer/Views/Doctor/Index.cshtml
+++ b/_source/LigaCancer/Views/Doctor/Index.cshtml
@@ -31,7 +31,7 @@
                                             <div class="form-group row">
                                                 <label class="col-md-3 form-control-label">Nome</label>
                                                 <div class="col-md-9">
-                                                    <input class="form-control" name="SearchString" value="@ViewData["currentFilter"]" type="text">
+                                                    <input class="form-control" name="searchNameString" value="@ViewData["CurrentSearchNameFilter"]" type="text">
                                                 </div>
                                             </div>
                                         </div>
