--- a/_source/LigaCancer/Views/Shared/_Pagination.cshtml
+++ b/_source/LigaCancer/Views/Shared/_Pagination.cshtml
@@ -24,11 +24,19 @@
         <nav aria-label="Page navigation example">
             <ul class="pagination justify-content-end">
                 <li class="page-item @firstDisabled">
-                    <a class="page-link" asp-action="Index" asp-route-page="1" asp-route-currentFilter="@ViewData["CurrentFilter"]" asp-route-sortOrder="@ViewData["CurrentSort"]">Início</a>
+                    <a class="page-link"
+                       asp-action="Index"
+                       asp-route-page="1"
+                       asp-route-currentSearchNameFilter="@ViewData["CurrentSearchNameFilter"]"
+                       asp-route-sortOrder="@ViewData["CurrentSort"]">Início</a>
                 </li>
 
                 <li class="page-item @prevDisabled">
-                    <a class="page-link" asp-action="Index" asp-route-page="@(Model.PageIndex - 1)" asp-route-currentFilter="@ViewData["CurrentFilter"]" asp-route-sortOrder="@ViewData["CurrentSort"]">
+                    <a class="page-link"
+                       asp-action="Index"
+                       asp-route-page="@(Model.PageIndex - 1)"
+                       asp-route-currentSearchNameFilter="@ViewData["CurrentSearchNameFilter"]"
+                       asp-route-sortOrder="@ViewData["CurrentSort"]">
                         Anterior
                     </a>
                 </li>
@@ -38,18 +46,30 @@
                     @if (Model.PageIndex > 2)
                     {
                         <li class="page-item">
-                            <a class="page-link" asp-action="Index" asp-route-page="@(Model.PageIndex - 2)" asp-route-currentFilter="@ViewData["CurrentFilter"]" asp-route-sortOrder="@ViewData["CurrentSort"]">@(Model.PageIndex - 2)</a>
+                            <a class="page-link"
+                               asp-action="Index"
+                               asp-route-page="@(Model.PageIndex - 2)"
+                               asp-route-currentSearchNameFilter="@ViewData["CurrentSearchNameFilter"]"
+                               asp-route-sortOrder="@ViewData["CurrentSort"]">@(Model.PageIndex - 2)</a>
                         </li>
                     }
                     <li class="page-item">
-                        <a class="page-link" asp-action="Index" asp-route-page="@(Model.PageIndex - 1)" asp-route-currentFilter="@ViewData["CurrentFilter"]" asp-route-sortOrder="@ViewData["CurrentSort"]">
+                        <a class="page-link"
+                           asp-action="Index"
+                           asp-route-page="@(Model.PageIndex - 1)"
+                           asp-route-currentSearchNameFilter="@ViewData["CurrentSearchNameFilter"]"
+                           asp-route-sortOrder="@ViewData["CurrentSort"]">
                             @(Model.PageIndex - 1)
                         </a>
                     </li>
                 }
 
                 <li class="page-item active">
-                    <a class="page-link" asp-action="Index" asp-route-page="@Model.PageIndex" asp-route-currentFilter="@ViewData["CurrentFilter"]" asp-route-sortOrder="@ViewData["CurrentSort"]">
+                    <a class="page-link"
+                       asp-action="Index"
+                       asp-route-page="@Model.PageIndex"
+                       asp-route-currentSearchNameFilter="@ViewData["CurrentSearchNameFilter"]"
+                       asp-route-sortOrder="@ViewData["CurrentSort"]">
                         @Model.PageIndex
                     </a>
                 </li>
@@ -57,14 +77,22 @@
                 @if (Model.HasNextPage)
                 {
                     <li class="page-item">
-                        <a class="page-link" asp-action="Index" asp-route-page="@(Model.PageIndex + 1)" asp-route-currentFilter="@ViewData["CurrentFilter"]" asp-route-sortOrder="@ViewData["CurrentSort"]">
+                        <a class="page-link"
+                           asp-action="Index"
+                           asp-route-page="@(Model.PageIndex + 1)"
+                           asp-route-currentSearchNameFilter="@ViewData["CurrentSearchNameFilter"]"
+                           asp-route-sortOrder="@ViewData["CurrentSort"]">
                             @(Model.PageIndex + 1)
                         </a>
                     </li>
                     @if (Model.PageIndex + 1 < Model.TotalPages)
                     {
                         <li class="page-item">
-                            <a class="page-link" asp-action="Index" asp-route-page="@(Model.PageIndex + 2)" asp-route-currentFilter="@ViewData["CurrentFilter"]" asp-route-sortOrder="@ViewData["CurrentSort"]">
+                            <a class="page-link"
+                               asp-action="Index"
+                               asp-route-page="@(Model.PageIndex + 2)"
+                               asp-route-currentSearchNameFilter="@ViewData["CurrentSearchNameFilter"]"
+                               asp-route-sortOrder="@ViewData["CurrentSort"]">
                                 @(Model.PageIndex + 2)
                             </a>
                         </li>
@@ -72,12 +100,20 @@
                 }
 
                 <li class="page-item @nextDisabled">
-                    <a class="page-link" asp-action="Index" asp-route-page="@(Model.PageIndex + 1)" asp-route-currentFilter="@ViewData["CurrentFilter"]" asp-route-sortOrder="@ViewData["CurrentSort"]">
+                    <a class="page-link"
+                       asp-action="Index"
+                       asp-route-page="@(Model.PageIndex + 1)"
+                       asp-route-currentSearchNameFilter="@ViewData["CurrentSearchNameFilter"]"
+                       asp-route-sortOrder="@ViewData["CurrentSort"]">
                         Próximo
                     </a>
                 </li>
                 <li class="page-item @lastDisabled">
-                    <a class="page-link" asp-action="Index" asp-route-page="@Model.TotalPages" asp-route-currentFilter="@ViewData["CurrentFilter"]" asp-route-sortOrder="@ViewData["CurrentSort"]">
+                    <a class="page-link"
+                       asp-action="Index"
+                       asp-route-page="@Model.TotalPages"
+                       asp-route-currentSearchNameFilter="@ViewData["CurrentSearchNameFilter"]"
+                       asp-route-sortOrder="@ViewData["CurrentSort"]">
                         Última
                     </a>
                 </li>
