Changed namespace and added many to many relations

--- a/_source/LigaCancer/Views/Doctor/DetailsDoctor.cshtml
+++ b/_source/LigaCancer/Views/Doctor/DetailsDoctor.cshtml
@@ -1,4 +1,4 @@
-﻿@model LigaCancer.Data.Models.Patient.Doctor
+﻿@model LigaCancer.Data.Models.PatientModels.Doctor
 
 @{
     ViewData["Title"] = "DetailslDoctor";
