--- a/_source/LigaCancer/Views/Doctor/Index.cshtml
+++ b/_source/LigaCancer/Views/Doctor/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model PaginatedList<LigaCancer.Data.Models.Patient.Doctor>
+﻿@model PaginatedList<LigaCancer.Data.Models.PatientModels.Doctor>
 @using LigaCancer.Code
 @{
     ViewData["Title"] = "Médicos";
