--- a/_source/LigaCancer/Views/Shared/_Pagination.cshtml
+++ b/_source/LigaCancer/Views/Shared/_Pagination.cshtml
@@ -1,4 +1,4 @@
-﻿@model PaginatedList<LigaCancer.Data.Models.Patient.Doctor>
+﻿@model PaginatedList<LigaCancer.Data.Models.PatientModels.Doctor>
 @using LigaCancer.Code
 @{
     var prevDisabled = !Model.HasPreviousPage ? "disabled" : "";
