Added unique to properties

--- a/_source/LigaCancer/Views/Shared/_Layout.cshtml
+++ b/_source/LigaCancer/Views/Shared/_Layout.cshtml
@@ -38,7 +38,7 @@
                     </li>
                     <li class="nav-title">Pacientes</li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/home/pacientes">
+                        <a class="nav-link" href="#">
                             <i class="nav-icon fa fa-child"></i> Pacientes
                         </a>
                     </li>
