--- a/_source/LigaCancer/Views/Shared/_Pagination.cshtml
+++ b/_source/LigaCancer/Views/Shared/_Pagination.cshtml
@@ -9,11 +9,11 @@
 
 <div class="row">
     <div class="col-sm-12 col-md-5">
-        @if (Model.InitValue == Model.EndValue)
+        @if (Model.InitValue == Model.EndValue && Model.EndValue != 0)
         {
             <div>Mostrando elemento @Model.InitValue de um total de @Model.CountTotal registros</div>
         }
-        else
+        else if(Model.EndValue != 0)
         {
             <div>Mostrando @Model.InitValue à @Model.EndValue de um total de @Model.CountTotal registros</div>
         }
@@ -23,23 +23,26 @@
     <div class="col-sm-12 col-md-7">
         <nav aria-label="Page navigation example">
             <ul class="pagination justify-content-end">
-                <li class="page-item @firstDisabled">
-                    <a class="page-link"
-                       asp-action="Index"
-                       asp-route-page="1"
-                       asp-route-currentSearchNameFilter="@ViewData["CurrentSearchNameFilter"]"
-                       asp-route-sortOrder="@ViewData["CurrentSort"]">Início</a>
-                </li>
+                @if (Model.TotalPages > 1)
+                {
+                    <li class="page-item @firstDisabled">
+                        <a class="page-link"
+                           asp-action="Index"
+                           asp-route-page="1"
+                           asp-route-currentSearchNameFilter="@ViewData["CurrentSearchNameFilter"]"
+                           asp-route-sortOrder="@ViewData["CurrentSort"]">Início</a>
+                    </li>
 
-                <li class="page-item @prevDisabled">
-                    <a class="page-link"
-                       asp-action="Index"
-                       asp-route-page="@(Model.PageIndex - 1)"
-                       asp-route-currentSearchNameFilter="@ViewData["CurrentSearchNameFilter"]"
-                       asp-route-sortOrder="@ViewData["CurrentSort"]">
-                        Anterior
-                    </a>
-                </li>
+                    <li class="page-item @prevDisabled">
+                        <a class="page-link"
+                           asp-action="Index"
+                           asp-route-page="@(Model.PageIndex - 1)"
+                           asp-route-currentSearchNameFilter="@ViewData["CurrentSearchNameFilter"]"
+                           asp-route-sortOrder="@ViewData["CurrentSort"]">
+                            Anterior
+                        </a>
+                    </li>
+                }
 
                 @if (Model.HasPreviousPage)
                 {
@@ -64,15 +67,18 @@
                     </li>
                 }
 
-                <li class="page-item active">
-                    <a class="page-link"
-                       asp-action="Index"
-                       asp-route-page="@Model.PageIndex"
-                       asp-route-currentSearchNameFilter="@ViewData["CurrentSearchNameFilter"]"
-                       asp-route-sortOrder="@ViewData["CurrentSort"]">
-                        @Model.PageIndex
-                    </a>
-                </li>
+                @if (Model.TotalPages > 1)
+                {
+                    <li class="page-item active">
+                        <a class="page-link"
+                           asp-action="Index"
+                           asp-route-page="@Model.PageIndex"
+                           asp-route-currentSearchNameFilter="@ViewData["CurrentSearchNameFilter"]"
+                           asp-route-sortOrder="@ViewData["CurrentSort"]">
+                            @Model.PageIndex
+                        </a>
+                    </li>
+                }
 
                 @if (Model.HasNextPage)
                 {
@@ -99,24 +105,27 @@
                     }
                 }
 
-                <li class="page-item @nextDisabled">
-                    <a class="page-link"
-                       asp-action="Index"
-                       asp-route-page="@(Model.PageIndex + 1)"
-                       asp-route-currentSearchNameFilter="@ViewData["CurrentSearchNameFilter"]"
-                       asp-route-sortOrder="@ViewData["CurrentSort"]">
-                        Próximo
-                    </a>
-                </li>
-                <li class="page-item @lastDisabled">
-                    <a class="page-link"
-                       asp-action="Index"
-                       asp-route-page="@Model.TotalPages"
-                       asp-route-currentSearchNameFilter="@ViewData["CurrentSearchNameFilter"]"
-                       asp-route-sortOrder="@ViewData["CurrentSort"]">
-                        Última
-                    </a>
-                </li>
+                @if (Model.TotalPages > 1)
+                {
+                    <li class="page-item @nextDisabled">
+                        <a class="page-link"
+                           asp-action="Index"
+                           asp-route-page="@(Model.PageIndex + 1)"
+                           asp-route-currentSearchNameFilter="@ViewData["CurrentSearchNameFilter"]"
+                           asp-route-sortOrder="@ViewData["CurrentSort"]">
+                            Próximo
+                        </a>
+                    </li>
+                    <li class="page-item @lastDisabled">
+                        <a class="page-link"
+                           asp-action="Index"
+                           asp-route-page="@Model.TotalPages"
+                           asp-route-currentSearchNameFilter="@ViewData["CurrentSearchNameFilter"]"
+                           asp-route-sortOrder="@ViewData["CurrentSort"]">
+                            Última
+                        </a>
+                    </li>
+                }
             </ul>
         </nav>
     </div>
