--- a/_source/LigaCancer/Views/Shared/_ValidationScriptsPartial.cshtml
+++ b/_source/LigaCancer/Views/Shared/_ValidationScriptsPartial.cshtml
@@ -1,4 +1,4 @@
-﻿<environment names="Development">
+﻿<environment names="Development, Production">
     <script src="~/lib/jquery-validate/jquery.validate.min.js"></script>
     <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
     <script src="~/lib/jquery-ajax-unobtrusive/dist/jquery.unobtrusive-ajax.min.js"></script>
