--- a/_source/LigaCancer/Views/Shared/_Layout.cshtml
+++ b/_source/LigaCancer/Views/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
 
     <link href="~/lib/fontawesome/web-fonts-with-css/css/fontawesome-all.min.css" rel="stylesheet" />
     <link href="~/css/style.css" rel="stylesheet" />
+    <link href="~/css/custom.css" rel="stylesheet" />
     @RenderSection("Styles", required: false)
 </head>
 
