--- a/_source/LigaCancer/Views/Shared/_ModalFooter.cshtml
+++ b/_source/LigaCancer/Views/Shared/_ModalFooter.cshtml
@@ -7,6 +7,7 @@
     {
         <button class="btn btn-primary" id="@Model.SubmitButtonId" type="submit">
             @Model.SubmitButtonText
+            <span id="submitSpinner" class="fa fa-spinner fa-pulse" style="display: none;"></span>
         </button>
     }
 </div>
