--- a/_source/LigaCancer/Views/Shared/_Layout.cshtml
+++ b/_source/LigaCancer/Views/Shared/_Layout.cshtml
@@ -61,7 +61,7 @@
                     </li>*@
                     <li class="nav-title">Informações Médicas</li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">
+                        <a class="nav-link" href="/medicine">
                             <i class="nav-icon fa fa-capsules"></i> Remédios
                         </a>
                     </li>
