--- a/_source/LigaCancer/Views/TreatmentPlace/_EditTreatmentPlace.cshtml
+++ b/_source/LigaCancer/Views/TreatmentPlace/_EditTreatmentPlace.cshtml
@@ -8,9 +8,9 @@
       data-ajax-success="AjaxSuccess"
       data-ajax-loading="#submitSpinner">
 
-    @await Html.PartialAsync("_ModalHeader", new ModalHeader { Heading = "Editar Médico" })
+    @await Html.PartialAsync("_ModalHeader", new ModalHeader { Heading = "Editar Cidade" })
     <div class="modal-body form-horizontal">
-        <h4>Médico</h4>
+        <h4>Cidade</h4>
         <hr />
 
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
