--- a/_source/LigaCancer/Views/Shared/_Layout.cshtml
+++ b/_source/LigaCancer/Views/Shared/_Layout.cshtml
@@ -39,7 +39,7 @@
                     </li>
                     <li class="nav-title">Pacientes</li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">
+                        <a class="nav-link" href="/patient">
                             <i class="nav-icon fa fa-child"></i> Pacientes
                         </a>
                     </li>
