--- a/_source/LigaCancer/Views/Patient/_AddPatient.cshtml
+++ b/_source/LigaCancer/Views/Patient/_AddPatient.cshtml
@@ -15,11 +15,11 @@
 
         <h4>
             Paciente
-            <a data-toggle="collapse" href="#collapsePatietn" aria-expanded="false" aria-controls="collapseOne" class="collapsed fa fa-arrow-alt-circle-down" style="margin-left: 1rem;"></a>
+            <a data-toggle="collapse" href="#collapsePatient" aria-expanded="false" aria-controls="collapseOne" class="collapsed fa fa-arrow-alt-circle-down" style="margin-left: 1rem;"></a>
         </h4>
         <hr />
         @* Todo: <div class="collapse show">*@
-        <div class="collapse show" id="collapsePatietn" role="tabpanel" aria-labelledby="headingOne">
+        <div class="collapse show" id="collapsePatient" role="tabpanel" aria-labelledby="headingOne">
             <div class="form-group">
                 <label asp-for="FirstName" class="control-label"></label>
                 <input asp-for="FirstName" class="form-control" />
@@ -100,22 +100,22 @@
         <div class="collapse" id="collapsePatientInformation" role="tabpanel" aria-labelledby="headingOne">
             <div class="form-group">
                 <label asp-for="PatientInformation.CancerTypes" class="control-label"></label>
-                <select asp-for="PatientInformation.CancerTypes" class="form-control"></select>
+                <select asp-for="PatientInformation.CancerTypes" asp-items="Model.SelectCancerTypes" class="form-control"></select>
                 <span asp-validation-for="PatientInformation.CancerTypes" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="PatientInformation.Medicines" class="control-label"></label>
-                <select asp-for="PatientInformation.Medicines" class="form-control"></select>
+                <select asp-for="PatientInformation.Medicines" asp-items="Model.SelectMedicines" class="form-control"></select>
                 <span asp-validation-for="PatientInformation.Medicines" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="PatientInformation.Doctors" class="control-label"></label>
-                <select asp-for="PatientInformation.Doctors" class="form-control"></select>
+                <select asp-for="PatientInformation.Doctors" asp-items="Model.SelectDoctors" class="form-control"></select>
                 <span asp-validation-for="PatientInformation.Doctors" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="PatientInformation.TreatmentPlaces" class="control-label"></label>
-                <select asp-for="PatientInformation.TreatmentPlaces" class="form-control"></select>
+                <select asp-for="PatientInformation.TreatmentPlaces" asp-items="Model.SelectTreatmentPlaces" class="form-control"></select>
                 <span asp-validation-for="PatientInformation.TreatmentPlaces" class="text-danger"></span>
             </div>
         </div>
