--- a/_source/LigaCancer/Views/Patient/Index.cshtml
+++ b/_source/LigaCancer/Views/Patient/Index.cshtml
@@ -95,10 +95,10 @@
                                                     @Html.DisplayFor(modelItem => item.FirstName)
                                                 </td>
                                                 <td>
-                                                    <a asp-action="DetailsPatient" asp-route-id="@item.PatientId" class="btn btn-info">
+                                                    <a asp-action="DetailsPatient" asp-route-id="@item.PatientId" class="btn btn-info disabled">
                                                         Mostrar
                                                     </a>
-                                                    <a asp-action="EditPatient" asp-route-id="@item.PatientId" data-toggle="modal" data-target="#modal-action-patient" class="btn btn-warning">
+                                                    <a asp-action="EditPatient" asp-route-id="@item.PatientId" data-toggle="modal" data-target="#modal-action-patient" class="btn btn-warning disabled">
                                                         Editar
                                                     </a>
                                                     <a asp-action="DeletePatient" asp-route-id="@item.PatientId" data-toggle="modal" data-target="#modal-action-patient" class="btn btn-danger">
