Hide present menu

--- a/_source/LigaCancer/Views/Shared/_Layout.cshtml
+++ b/_source/LigaCancer/Views/Shared/_Layout.cshtml
@@ -43,11 +43,11 @@
                             <i class="nav-icon fa fa-child"></i> Pacientes
                         </a>
                     </li>
-                    <li class="nav-item">
+                    @*<li class="nav-item">
                         <a class="nav-link" href="#">
                             <i class="nav-icon fa fa-clipboard-list"></i> Presença
                         </a>
-                    </li>
+                    </li>*@
                     @*<li class="nav-title">Benefícios</li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">
